log
Fri 05 May 2023 12:41:18 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:89:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   89 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
8784607
Fri 05 May 2023 12:47:02 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
557fbb9
Fri 05 May 2023 12:48:44 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
22c5075
Fri 05 May 2023 12:49:23 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:7: error: ‘nodoNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   69 |       pushBack(list, nodoNuevo);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9afe4ee
Fri 05 May 2023 12:50:34 PM UTC: 
 sudoku.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
5f34a09
Fri 05 May 2023 01:01:02 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:25: error: ‘nuevoMov’ may be used uninitialized [-Werror=maybe-uninitialized]
   65 |           n->sudo[h][z] = nuevoMov;
      |           ~~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
279764a
Fri 05 May 2023 01:01:55 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
9721fe7
Fri 05 May 2023 01:09:59 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:10: error: unused variable ‘nuevoMov’ [-Werror=unused-variable]
   56 |     char nuevoMov;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b28bcf
Fri 05 May 2023 01:10:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
16ab6e0
Fri 05 May 2023 01:10:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4f620ea
Fri 05 May 2023 01:12:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2736a8c
Fri 05 May 2023 01:12:37 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
59b3e86
Fri 05 May 2023 01:15:31 PM UTC: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
d7c1703
Fri 05 May 2023 01:16:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0be948a
Fri 05 May 2023 01:16:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d160418
Fri 05 May 2023 01:18:13 PM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:15: error: unused variable ‘m’ [-Werror=unused-variable]
   67 |     int h, z, m;
      |               ^
sudoku.c:67:12: error: unused variable ‘z’ [-Werror=unused-variable]
   67 |     int h, z, m;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
6cf15d9
Fri 05 May 2023 01:18:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
60dee94
Fri 05 May 2023 01:33:13 PM UTC: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:18: error: ‘nuevoMov’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   75 |       nuevoMov = busqueda(nodoNuevo, h, nuevoMov);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79717a1
Fri 05 May 2023 01:35:54 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
bcda434
Fri 05 May 2023 01:37:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
698f196
Fri 05 May 2023 01:37:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
aa64d61
Fri 05 May 2023 01:38:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5e9bade
Fri 05 May 2023 01:38:39 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
44c63f5
Fri 05 May 2023 01:39:41 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1236a43
Fri 05 May 2023 01:44:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 5/70
0367fd1
Fri 05 May 2023 01:46:23 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
16efce2
Sat 06 May 2023 02:56:12 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  2|4
total_score: 15/70
88cde9b
Sat 06 May 2023 02:56:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:10: error: variable ‘z’ set but not used [-Werror=unused-but-set-variable]
   54 |   int h, z;
      |          ^
sudoku.c:54:7: error: variable ‘h’ set but not used [-Werror=unused-but-set-variable]
   54 |   int h, z;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
b8ebe3e
